# conceptgraph

./: .gitignore  .mcp.json  DEPLOY.md  README.md  arc.md  knoeledge-pipeline-spec  package-lock.json  package.json  prd.md  project_state.md  render.yaml
backend/: .env.example  .gitignore  Procfile  README.md  _core_eval.py  _enum_ws.py  _fetch_arxiv.py  _gate_replay.py  _mint_pat.py  _noise_test.py  _provision_cognito.py  _reingest.py  _relabel.py  _seed_mckee.py  _test_corpus.py  _test_pipeline.py  _verify.py  _wait_ingest.py  _watch.py  alembic.ini  dev.sh  pyproject.toml  reclean_body_markdown.py
backend/app/: auth.py  cognito.py  config.py  db.py  main.py  models.py  supabase_client.py  worker.py
backend/app/ai/: __init__.py  answer.py  cleanup.py  client.py  embeddings.py  extract.py  labels.py  merge.py  select_core.py  summarize.py
backend/app/mcp/: app_ui.py  auth.py  pat.py  runtime.py  server.py  tools.py
backend/app/routers/: activity.py  annotations.py  ask.py  chat.py  clusters.py  concepts.py  documents.py  graph.py  graph_edit.py  health.py  imports.py  invites.py  me.py  oauth_metadata.py  oauth_register.py  public.py  search.py  workspaces.py
backend/app/services/: __init__.py  agent.py  chunk.py  clip.py  clustering.py  concept_read.py  concepts.py  dedup_sweep.py  graph_read.py  parse.py  public_limits.py  public_seed.py  search.py  simhash.py  storage.py  (+4 more)
backend/migrations/: env.py
backend/scripts/: seed_public_template.py
backend/tests/: test_agent.py  test_answer.py  test_clustering.py  test_concepts_alias.py  test_parse.py  test_search.py  test_select_core.py  test_sweep_orphans.py  test_thesis.py
(+164 files in other folders)
