[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "pydantic-settings>=2.14.1",
    "pyjwt[crypto]>=2.10.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "uvicorn[standard]>=0.49.0",
    "openai>=2.43.0",
    "arq>=0.28.0",
    "redis>=5.3.1",
    "pymupdf>=1.27.2.3",
    "pgvector>=0.4.2",
    "boto3>=1.43.32",
    "tiktoken>=0.13.0",
    "numpy>=2.4.6",
    "igraph>=1.0.0",
    "leidenalg>=0.12.0",
    "pymupdf4llm>=1.27.2.3",
    "mcp[cli]>=1.28.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
# auto: a plain `async def test_*` is run on an event loop without a marker — the
# knowledge store is async, so most tests await it.
asyncio_mode = "auto"

